83: дополнения логов