@@ -23,54 +23,64 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(CarBrandNotFoundException.class)
     public ResponseEntity<String> handleCarBrandNotFoundException(CarBrandNotFoundException e) {
-        return new ResponseEntity<>(e.getMessage(), HttpStatus.I_AM_A_TEAPOT);
+        String message = String.format("Exception %s: %s", e.getClass(), e.getMessage());
+        log.warn(message);
+        return new ResponseEntity<>(message, HttpStatus.I_AM_A_TEAPOT);
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<ApiError> handleConstraintViolationException(ConstraintViolationException ex) {
-        List<String> errors = ex.getConstraintViolations().stream()
+    public ResponseEntity<ApiError> handleConstraintViolationException(ConstraintViolationException e) {
+        List<String> errors = e.getConstraintViolations().stream()
                 .map(violation -> violation.getPropertyPath() + ": " + violation.getMessage())
-                .collect(Collectors.toList());
-        return new ResponseEntity<>(new ApiError(HttpStatus.BAD_REQUEST, "Validation errors", errors),
+                .toList();
+        String message = String.format("Exception %s: %s", e.getClass(), errors);
+        log.warn(message);
+        return new ResponseEntity<>(new ApiError(HttpStatus.BAD_REQUEST, "Validation errors", message),
                 HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(EntityNotFoundException.class)
-    public ResponseEntity<ApiError> handleEntityNotFoundException(EntityNotFoundException ex) {
-        log.warn("Handling EntityNotFoundException: " + ex.getMessage());
-        return new ResponseEntity<>(new ApiError(HttpStatus.I_AM_A_TEAPOT, ex.getMessage(),
+    public ResponseEntity<ApiError> handleEntityNotFoundException(EntityNotFoundException e) {
+        String message = String.format("Exception %s: %s", e.getClass(), e.getMessage());
+        log.warn(message);
+        return new ResponseEntity<>(new ApiError(HttpStatus.I_AM_A_TEAPOT, message,
                 (List<String>) null), HttpStatus.I_AM_A_TEAPOT);
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ApiError> handleGeneralException(Exception ex) {
-        log.warn("Handling Exception: " + ex.getMessage());
-        return new ResponseEntity<>(new ApiError(HttpStatus.INTERNAL_SERVER_ERROR, ex.getMessage(),
+    public ResponseEntity<ApiError> handleGeneralException(Exception e) {
+        String message = String.format("Exception %s: %s", e.getClass(), e.getMessage());
+        log.warn(message);
+        return new ResponseEntity<>(new ApiError(HttpStatus.INTERNAL_SERVER_ERROR, message,
                 (List<String>) null), HttpStatus.INTERNAL_SERVER_ERROR);
     }
 
     @ExceptionHandler(EntranceWasAlreadyException.class)
     public ResponseEntity<String> handleEntranceWasAlreadyException(EntranceWasAlreadyException e) {
-        log.warn("Handling EntranceWasAlreadyException: " + e.getMessage());
-        return new ResponseEntity<>(e.getMessage(), HttpStatus.BAD_REQUEST);
+        String message = String.format("Exception %s: %s", e.getClass(), e.getMessage());
+        log.warn(message);
+        return new ResponseEntity<>(message, HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(InactivePassException.class)
     public ResponseEntity<String> handleNoActivePassException(InactivePassException e) {
-        log.warn("Handling NoActivePassException: " + e.getMessage());
-        return new ResponseEntity<>(e.getMessage(), HttpStatus.BAD_REQUEST);
+        String message = String.format("Exception %s: %s", e.getClass(), e.getMessage());
+        log.warn(message);
+        return new ResponseEntity<>(message, HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(TerritoryNotFoundException.class)
     public ResponseEntity<String> handleTerritoryNotFoundException(TerritoryNotFoundException e) {
-        log.warn("Handling TerritoryNotFoundException: " + e.getMessage());
-        return new ResponseEntity<>(e.getMessage(), HttpStatus.I_AM_A_TEAPOT);
+        String message = String.format("Exception %s: %s", e.getClass(), e.getMessage());
+        log.warn(message);
+        return new ResponseEntity<>(message, HttpStatus.I_AM_A_TEAPOT);
     }
 
     @ExceptionHandler(PassNotFoundException.class)
     public ResponseEntity<String> handlePassNotFoundException(PassNotFoundException e) {
-        log.info("Handling PassNotFoundException: " + e.getMessage());
-        return new ResponseEntity<>(e.getMessage(), HttpStatus.I_AM_A_TEAPOT);
+        String message = String.format("Exception %s: %s", e.getClass(), e.getMessage());
+        log.warn(message);
+        return new ResponseEntity<>(message, HttpStatus.I_AM_A_TEAPOT);
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
